fixed overflow as requested

--- a/app/frontend/src/CSS/common.css
+++ b/app/frontend/src/CSS/common.css
@@ -37,7 +37,7 @@
 .container {
   flex-grow: 1;
   background-color: var(--backgroundColor);
-  
+  overflow: auto;
 }
 
 .main-content {
